# oets

./: .gitignore  About.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  Proposal.md  README.md  buf.gen.yaml  buf.yaml  pyproject.toml  requirements-test.txt  requirements.txt
common/: account.proto  event_envelope.proto  execution_venue.proto  instrument.proto  relationships.proto  source.proto  timestamps.proto
docs/: ARCHITECTURE.md  SCALING.md  building-an-oets-gateway.md
scripts/: generate_python_protos.py
tests/: conftest.py  test_buf_config.py  test_ci_workflow.py  test_docs_scaffolds.py  test_generated_python.py  test_h1_proto_stubs_filled.py  test_h2_fee_fee_type_enum.py  test_h3_scaling_documentation.py  test_l5_instrument_ref.py  test_l6_fillevent_source_dedup.py  test_l7_oets_version.py  test_m1_eventtype_no_gap.py  test_m2_fillevent_timestamps_dedup.py  test_m3_enum_zero_sentinels.py  test_m4_timestamp_type.py  test_m5_expiry_date.py  test_m6_fee_amount_type.py  test_makefile_grpc_tools.py  test_makefile_l2.py  test_makefile_structure.py  test_pb2_gencode_version.py  test_proto_structure.py  test_protobuf_pin.py  test_r2_10_readme.py  test_r2_1_orderevent_dedup.py  test_r2_2_envelope_hybrid.py  test_r2_3_eventtype_funding_and_rename.py  test_r2_4_cashflow_timestamps.py  test_r2_5_makefile_uses_grpc_tools.py  test_r2_6_cosmetic_cleanup.py  test_r2_7_validation_packaging.py  test_r2_8_cross_message_invariants.py  test_r2_9_buf_except_staleness.py  test_r3_10_changelog.py  test_r3_1_fee_wired_in.py  test_r3_2_protobuf_pin.py  test_r3_3_gitignore.py  (+8 more)
(+11 files in other folders)
