[project]
name = "oets"
version = "0.1.0"
description = "Open Execution Telemetry Standard — proto schemas"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "protobuf>=5.29,<6",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# Only ship the validation package for now.
# generated/python/ shipping is deferred to the layout-restructure ticket (zachisit/oets#7).
[tool.setuptools]
packages = ["validation"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
